# pwscore

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
benchmarks/: benchmark.py  build_bloom.py  train_markov.py
benchmarks/results/: report.md
docker/: Dockerfile
src/pwscore/: __main__.py  analyzer.py  api.py  cli.py  models.py
src/pwscore/checks/: hibp.py  patterns.py  wordlist.py  zxcvbn_wrap.py
src/pwscore/data/: markov_rockyou.json  rockyou_top10k.bloom
src/pwscore/entropy/: charset.py  markov.py  shannon.py
tests/: test_analyzer.py  test_api.py  test_cli.py  test_entropy_charset.py  test_entropy_markov.py  test_entropy_shannon.py  test_hibp.py  test_patterns.py  test_wordlist.py  test_zxcvbn_wrap.py
