[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwscore"
version = "0.1.0"
description = "Password strength analyzer combining Shannon entropy, Markov scoring, zxcvbn, and HaveIBeenPwned."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aws Raed Diab", email = "awsraedd8@gmail.com" }]
keywords = ["security", "password", "entropy", "hibp", "zxcvbn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20",
    "zxcvbn>=4.4.28",
    "pybloom-live>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]
bench = [
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.scripts]
pwscore = "pwscore.cli:app"

[project.urls]
Homepage = "https://github.com/ii-4ws/pwscore"
Issues = "https://github.com/ii-4ws/pwscore/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pwscore"]

[tool.hatch.build.targets.wheel.force-include]
"src/pwscore/data" = "pwscore/data"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
packages = ["pwscore"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pwscore"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
